last edits to resume

--- a/resume.Rmd
+++ b/resume.Rmd
@@ -46,7 +46,7 @@ Relevant Coursework:
 
 ## Publications 
 
-The Evidence Consortium on Women's Groups:
+Policy Brief for the Evidence Consortium on Women's Groups:
 
 * [Impact of COVID-19 on Opportunities for Adolescent Girls and the Role of Girls' Groups](https://www.popcouncil.org/uploads/pdfs/2020PGY_ECWG-AdolescentGirlsCOVID.pdf)
 
