--- a/dashboard_data.Rmd
+++ b/dashboard_data.Rmd
@@ -32,7 +32,7 @@ nyc_inspect =
   
 ```
 
-Row {data-width=550}
+Column
 -----------------------------------------------------------------------
 
 ### Total Critical Flags Across Various Cuisine Types in Manhattan
@@ -57,7 +57,7 @@ nyc_inspect %>%
           colors = "viridis")
 ```
 
-Row {.tabset}
+Column {.tabset}
 -----------------------------------------------------------------------
 
 ### Distibution of "American" Cuisine that Received Critical Flags Across NYC Boroughs
