--- a/resume.Rmd
+++ b/resume.Rmd
@@ -63,7 +63,7 @@ Responsibilities:
 * Assist faculty with facilitating online lectures 
 * Lead a lab for a subsection of first year graduate students to review lecture concepts and example problems
 
-### Population Countil (2020-Present)
+### Population Council (2020-Present)
 
 Currently serving as a Research Assistant at the Population Council, based in NYC. 
 
